8/8/12
  Fixed Kill client and quit
  the order windows are focused in is remembered -
      makes a difference in stacking mode !

5/8/12
  Change the grid mode for up to 5 rows and columns with the option to resize the
  first column and the second window.

6/7/12
  Fix for transient window mapping order

5/7/12
  Remove transient windows that flash up on one desktop then show on another from the desktop

2/7/12
  Just map the desktop switcher and bar windows
  Click on the bar to change to previous desktop

28/6/12
  Changed the desktop switcher to have buttons the width of the
   desktop name instead of a uniform size

25/6/12
  Send mouse clicks through to window when focusing

23/6/12
  Use XFetchName for root window name in bar

19/6/12
  Defined the RC FILE as $HOME/.config/snapwm/rc.conf
  Changed the config.h.def to be generic not as I use config.h

6/6/12
  Changed number of SHOWNUMOPEN from number+colon to a meter at the bottom of the switcher

4/6/12
  Added 'double buffer' for text in the bar

30/5/12
  Added support for multibyte fonts
  When updating, don't change modes for desktops with open windows
  Center text in desktop switcher with showopen=0

27/4/12
  Fixed click to focus

22/4/12
  Added check for stray ampersands in the external text
  Seperated the font colours from the bar in the config.h and the rc files
  Fix for window focus changing when a transient window pops up

21/4/12
  Seperated the bar and window colours in the config.h and rc files

20/4/12
  Added option in the config to choose which mod key is used when
   moving/resizing in stacking mode
  Fix for focus swapping between overlapping windows in stacking mode

13/4/12
  Added stacking mode

7/4/12
  Fix for transient windows going off the screen

1/4/12
  Added switching clicktofocus to the rc file
  Added adjusting the displayed length of the current window's name in the bar
    to the config and the rc file

25/3/12