@@ -1,3 +1,7 @@
+10/8/12
+  Can now add/remove windows to/from the master area
+    with keyboard shortcuts
+
 8/8/12
   Fixed Kill client and quit
   the order windows are focused in is remembered -
